--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ lerna-*
 ## Components examples
 /packages/components/*/example/*
 !/packages/components/*/example/static/
-!/packages/components/*/example/Example.html
-!/packages/components/*/example/Example.svelte
+!/packages/components/*/example/*.html
+!/packages/components/*/example/*.svelte
 
 ## Directories
 log/
