--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -8,7 +8,7 @@
     { "title": "Padrão", "path": "example/Default.html", "ih": 100 },
     { "title": "Desativado", "path": "example/Disabled.html", "ih": 100 },
     { "title": "Secundário", "path": "example/Secondary.html", "ih": 100 },
-    { "title": "Pequeno", "path": "example/Small.html", "ih": 100 },
+    { "title": "Pequeno", "path": "example/Small.html", "ih": 100 }
   ],
   "publishConfig": {
     "access": "public"
