--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -1,27 +1,59 @@
 {
   "name": "@mamba/button",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "svelte": "Button.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "examples": [
-    { "title": "Padrão", "path": "example/Default.html", "ih": 100 },
-    { "title": "Desativado", "path": "example/Disabled.html", "ih": 100 },
-    { "title": "Secundário", "path": "example/Secondary.html", "ih": 100 },
-    { "title": "Pequeno", "path": "example/Small.html", "ih": 100 },
-    { "title": "Tela cheia", "path": "example/FullScreen.html", "ih": 100 },
-    { "title": "Largura personalizada", "path": "example/CustomWidth.html", "ih": 100 },
-    { "title": "Botão inferior", "path": "example/Bottom.html", "ih": 100 },
-    { "title": "Com Ícone", "path": "example/ButtonIcon.html", "ih": 100 }
+    {
+      "title": "Padrão",
+      "path": "example/Default.html",
+      "ih": 100
+    },
+    {
+      "title": "Desativado",
+      "path": "example/Disabled.html",
+      "ih": 100
+    },
+    {
+      "title": "Secundário",
+      "path": "example/Secondary.html",
+      "ih": 100
+    },
+    {
+      "title": "Pequeno",
+      "path": "example/Small.html",
+      "ih": 100
+    },
+    {
+      "title": "Tela cheia",
+      "path": "example/FullScreen.html",
+      "ih": 100
+    },
+    {
+      "title": "Largura personalizada",
+      "path": "example/CustomWidth.html",
+      "ih": 100
+    },
+    {
+      "title": "Botão inferior",
+      "path": "example/Bottom.html",
+      "ih": 100
+    },
+    {
+      "title": "Com Ícone",
+      "path": "example/ButtonIcon.html",
+      "ih": 100
+    }
   ],
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/icon": "^3.2.0"
+    "@mamba/icon": "^3.2.1"
   },
   "dependencies": {
-    "@mamba/styles": "^3.2.0"
+    "@mamba/styles": "^3.3.0"
   },
   "peerDependencies": {
     "@mamba/pos": ">3.0.0"
