--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-loader": "^8.0.4",
+    "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
@@ -36,7 +37,7 @@
     "svelte-loader": "^2.12.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.18.0",
+    "webpack": "^4.28.3",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.1.14",
