--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,6 +12,7 @@
   "gitHead": "0daaddf15510894989750580009daa93e1fbb6db",
   "dependencies": {
     "date-fns": "^2.5.1",
-    "date-fns-tz": "^1.0.8"
+    "date-fns-tz": "^1.0.8",
+    "@mamba/pos": "^3.3.0"
   }
 }
