--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -37,7 +37,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "~2.20.1",
     "eslint-plugin-jest": "^22.2.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
