--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mamba/icon": "^3.5.2",
+    "@mamba/pos": "^3.6.5",
     "@mamba/styles": "^3.5.2",
     "@mamba/utils": "^3.6.0"
   }
