--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/input",
-  "version": "4.0.0-rc.1",
+  "version": "4.0.0",
   "svelte": "Input.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
