--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -12,8 +12,10 @@
     "@mamba/styles": "^3.5.2"
   },
   "peerDependencies": {
-    "@mamba/pos": ">3.0.0",
-    "@mamba/utils": ">=3.7.0"
+    "@mamba/pos": ">3.0.0"
   },
-  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
+  "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5",
+  "dependencies": {
+    "@mamba/utils": ">=3.7.0"
+  }
 }
