--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/configs",
-  "version": "3.5.6",
+  "version": "3.5.5",
   "description": "Tooling config presets to use in mamba projects.",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -9,6 +9,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "eslint": "^6.0.0",
+    "postcss": "^7.0.14",
+    "prettier": "^1.16.4",
+    "stylelint": "^10.0.1",
+    "svelte-preprocess": "^2.4.3"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.2.2",
+    "@mamba/pos": ">3.0.0",
+    "eslint": "^6.0.0",
+    "postcss": "^7.0.14",
+    "prettier": "^1.16.4",
+    "svelte-preprocess": "^2.4.3"
+  },
+  "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "~7.12.17",
@@ -19,14 +34,13 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "chalk": "^2.4.2",
     "css-mqpacker": "^7.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^7.0.14",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "~2.20.1",
+    "eslint-plugin-jest": "^22.2.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "postcss-advanced-variables": "^3.0.0",
     "postcss-calc": "^7.0.1",
     "postcss-easy-import": "^3.0.0",
@@ -37,21 +51,10 @@
     "postcss-preset-env": "^6.5.0",
     "postcss-reporter": "^6.0.1",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^2.4.1",
     "quickenv": "^0.0.6",
     "resolve": "^1.10.0",
-    "stylelint": "^10.0.1",
     "stylelint-config-standard": "^18.2.0",
-    "svelte-preprocess": "^2.4.3",
     "webpack-merge": "^4.2.1"
-  },
-  "peerDependencies": {
-    "@babel/core": "^7.2.2",
-    "@mamba/pos": ">3.0.0",
-    "eslint": "^7.32.0",
-    "postcss": "^7.0.14",
-    "prettier": "^2.4.1",
-    "svelte-preprocess": "^2.4.3"
   },
   "gitHead": "869644effc7b7347a2ff75c956c57d69ee8236a5"
 }
