--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,7 +12,7 @@
   "gitHead": "0daaddf15510894989750580009daa93e1fbb6db",
   "dependencies": {
     "@mamba/pos": "^3.6.0",
-    "date-fns": "^2.5.1",
-    "date-fns-tz": "^1.0.8"
+    "date-fns": "2.28.0",
+    "date-fns-tz": "1.2.2"
   }
 }
