--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/pos",
-  "version": "3.13.9",
+  "version": "3.13.10",
   "description": "Mamba web environment wrapper and simulator",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -8,6 +8,9 @@
     "access": "public"
   },
   "main": "index.js",
+  "scripts": {
+    "version": "yarn config set version-tag-prefix \"@mamba/pos@\" && yarn version && yarn config set version-tag-prefix \"\""
+  },
   "dependencies": {
     "@mamba/app": "3.9.3",
     "@mamba/button": "3.5.8",
