--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "jest-canvas-mock": "~1.1.0",
     "lerna": "^4.0.0",
     "lint-staged": "~8.1.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.13",
     "prettier": "^1.15.3",
     "quickenv": "^0.0.6",
