--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "link:packages": "lerna exec npm link",
     "packages:clear": "lerna exec -- rm -rf node_modules package-lock.json",
     "check-next-version": "echo 'n' | lerna version",
-    "release": "rm -rf packages/**/package-lock.json && lerna publish"
+    "release": "rm -rf packages/**/package-lock.json && lerna publish",
+    "link": "./tools/get-links.sh"
   },
   "config": {
     "commitizen": {
