--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,6 @@
   /** Disable svelte-vscode linters */
   "svelte.plugin.css.diagnostics.enable": false,
   "svelte.plugin.typescript.diagnostics.enable": false,
-  "svelte.plugin.html.format.enable": false,
 
   /** Associate css files to postcss language */
   "files.associations": {
@@ -51,6 +50,13 @@
     "editor.formatOnSave": true
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+    "source.fixAll.eslint": true,
+    "source.fixAll.stylelint": true
+  },
+
+  /* Specifying which files to validate */
+  "stylelint.validate": ["css", "postcss"],
+
+  /* Controls the package manager to be used to resolve the Stylelint library */
+  "stylelint.packageManager": "yarn"
 }
