--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -13,14 +13,14 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "npm run build:pos && npm run build:desktop",
+    "build": "yarn run build:pos && yarn run build:desktop",
     "build:pos": "postcss ./src/pos.pcss -o ./dist/pos.css --verbose",
     "build:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css --verbose",
     "postbuild": "ncp ./src/assets dist/assets",
-    "start": "npm run start:pos",
+    "start": "yarn run start:pos",
     "start:pos": "postcss ./src/pos.pcss -o ./dist/pos.css -w --verbose",
     "start:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css -w --verbose",
-    "prepublish": "npm run build"
+    "prepublish": "yarn run build"
   },
   "devDependencies": {
     "ncp": "^2.0.0",
