--- a/packages/components/Keyboard/package.json
+++ b/packages/components/Keyboard/package.json
@@ -1,15 +1,20 @@
 {
   "name": "@mamba/keyboard",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "svelte": "Keyboard.html",
   "main": "build/dist.js",
   "description": "POS physical keyboard handler and virtual ones",
+  "author": "Stone Payments - Mamba Team",
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8 || <= 14",
+    "npm": "^7 || ^8"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stone-payments/pos-mamba-sdk.git",
     "directory": "packages/components/Keyboard"
   },
-  "author": "Stone Payments - Mamba Team",
-  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/stone-payments/pos-mamba-sdk/issues"
   },
@@ -19,5 +24,8 @@
     "prebuild": "rimraf dist types",
     "compile": "tsc -p tsconfig.json",
     "build": "run-s prebuild compile"
+  },
+  "peerDependencies": {
+    "@mamba/core": "*"
   }
 }
