--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -13,22 +13,19 @@
   },
   "main": "index.js",
   "dependencies": {
-    "immer": "^2.1.5",
-    "svelte": "<3"
+    "immer": "^2.1.5"
   },
   "devDependencies": {
-    "@mamba/core": "*",
     "@mamba/app": ">=4",
     "@mamba/button": ">=4",
     "@mamba/dialog": ">=4",
     "@mamba/icon": ">=4",
     "@mamba/radio": ">=4",
     "@mamba/sprite": ">=4",
+    "@mamba/styles": ">=4",
+    "@mamba/switch": ">=4",
     "@mamba/utils": ">=4",
-    "@mamba/switch": ">=4"
+    "svelte": "<3"
   },
-  "peerDependencies": {
-    "@mamba/keyboard": "*"
-  },
-  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
+  "gitHead": "78978116d5c790c51aaf9af9db47ea8beaa4726b"
 }
