--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -13,9 +13,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "gitHead": "78978116d5c790c51aaf9af9db47ea8beaa4726b",
   "dependencies": {
     "date-fns": "2.28.0",
     "date-fns-tz": "1.2.2"
-  },
-  "gitHead": "0daaddf15510894989750580009daa93e1fbb6db"
+  }
 }
