--- a/packages/components/Keyboard/tsconfig.json
+++ b/packages/components/Keyboard/tsconfig.json
@@ -13,6 +13,7 @@
     "moduleResolution": "node",
     "downlevelIteration": true,
     "strict": true,
+    "isolatedModules": true,
     "removeComments": false
   },
   "include": ["src"]
