--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -21,8 +21,8 @@
     "@mamba/utils": "9.0.0"
   },
   "peerDependencies": {
-    "@mamba/core": "9.0.0",
-    "@mamba/keyboard": "9.0.0"
+    "@mamba/core": "^9.0.0",
+    "@mamba/keyboard": "^9.0.0"
   },
   "examples": [
     {
