--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/collection",
-  "version": "9.0.1",
+  "version": "9.0.2",
   "svelte": "Collection.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -12,8 +12,8 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "^9.0.0",
-    "@mamba/switch": "9.0.0"
+    "@mamba/styles": "^9.0.2",
+    "@mamba/switch": "^9.0.2"
   },
   "peerDependencies": {
     "@mamba/icon": "^9.0.0"
