--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -27,8 +27,8 @@
     "html-minifier": "^4.0.0",
     "json-loader": "^0.5.7",
     "lodash-webpack-plugin": "^0.11.6",
-    "mini-css-extract-plugin": "^0.6.0",
-    "mini-html-webpack-plugin": "^0.2.3",
+    "mini-css-extract-plugin": "1.0.0",
+    "mini-html-webpack-plugin": "1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.8",
     "postcss": "^7.0.0",
     "postcss-loader": "^3.0.0",
@@ -51,7 +51,7 @@
     "xmlbuilder": "^12.0.0"
   },
   "peerDependencies": {
-    "@mamba/configs": "9.0.0"
+    "@mamba/configs": "^9.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
