--- a/packages/components/Image/package.json
+++ b/packages/components/Image/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mamba/gif",
+  "name": "@mamba/image",
   "version": "9.1.0",
-  "svelte": "Gif.html",
+  "svelte": "Image.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "engines": {
