--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -68,5 +68,8 @@
     "typescript": "^4.0.0",
     "webpack-merge": "^4.2.1"
   },
+  "peerDependencies": {
+    "eslint": "^7.0.0"
+  },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
