--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -51,7 +51,8 @@
     "xmlbuilder": "^12.0.0"
   },
   "peerDependencies": {
-    "@mamba/configs": "^9.0.0"
+    "@mamba/configs": "^9.0.0",
+    "eslint": "^7.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
