--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -25,8 +25,8 @@
     "prettier": "^2.8.8"
   },
   "peerDependencies": {
-    "stylelint": "^15",
-    "prettier": "^2"
+    "prettier": "^2",
+    "stylelint": "^15"
   },
   "dependencies": {
     "stylelint-config-html": "^1.1.0",
