--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "test:ci": "jest --no-cache --verbose",
     "link:packages": "lerna exec npm link",
     "build:modules": "lerna run --no-bail --scope=\"@mamba/{keyboard,core,styles}*\" build",
-    "postinstall": "run-s build:modules",
     "packages:clear": "lerna exec -- rm -rf node_modules package-lock.json",
     "check-next-version": "echo 'n' | lerna version",
     "release": "rm -rf packages/**/package-lock.json && lerna publish",
@@ -57,37 +56,24 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/eslint-parser": "^7.18.2",
+    "@babel/core": "^7.21.4",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^14.1.0",
     "@commitlint/config-lerna-scopes": "^15.0.0",
-    "@mamba/pos": "*",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "babel-jest": "^27.3.1",
+    "@types/node": "^20.1.5",
     "commitizen": "^3.1.2",
-    "cross-env": "^5.2.0",
-    "deasync": "^0.1.14",
-    "eslint": "^7.0.0",
-    "git-cz": "^3.0.0",
-    "husky": "^1.3.1",
-    "immer": "^2.1.5",
-    "jest": ">=28.0.0 <29.0.0-0",
-    "jest-canvas-mock": "^2.4.0",
-    "jest-environment-jsdom": "28.1.0",
-    "jest-junit": "^13.0.0",
-    "lerna": "^4.0.0",
-    "lint-staged": "~8.2.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.40.0",
+    "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.0",
-    "prettier": "^2.0.0",
-    "quickenv": "^0.0.6",
-    "stylelint": "^14.0.0",
-    "svelte": "<3",
-    "ts-jest": "^28.0.0",
-    "typescript": "^4.7.2"
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.0",
+    "stylelint": "^15",
+    "svelte": "^3.59.1",
+    "svelte-preprocess": "^5.0.3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5"
   },
   "packageManager": "yarn@3.5.1"
 }
