--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -5,70 +5,11 @@
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">= 8 || <= 14",
+    "node": ">= 19",
     "npm": ">= 7"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7",
-    "@babel/eslint-parser": "^7.18.2",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "~7.12.17",
-    "@babel/preset-typescript": "^7.17.12",
-    "@babel/runtime": "^7.3.1",
-    "@babel/types": "^7.18.4",
-    "@tivac/eslint-plugin-svelte": "^1.2.1",
-    "@types/babel__core": "^7.1.19",
-    "@types/node": "^17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-preset-airbnb": "^5.0.0",
-    "chalk": "^2.4.2",
-    "core-js": "~3.4.0",
-    "css-mqpacker": "^7.0.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-jest": "^22.2.2",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "lodash": "^4.17.21",
-    "postcss": "^7.0.0",
-    "postcss-advanced-variables": "^3.0.0",
-    "postcss-calc": "^7.0.1",
-    "postcss-easy-import": "^3.0.0",
-    "postcss-extend-rule": "^2.0.0",
-    "postcss-hexrgba": "^1.0.2",
-    "postcss-html": "^1.0.0",
-    "postcss-nested": "^4.0.0",
-    "postcss-preset-env": "^6.0.0",
-    "postcss-reporter": "^6.0.1",
-    "postcss-syntax": "^0.36.2",
-    "prettier": "^2.6.0",
-    "quickenv": "^0.0.6",
-    "resolve": "^1.10.0",
-    "stylelint": "^14.0.0",
-    "stylelint-config-html": "^1.0.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^25.0.0",
-    "svelte": "<3",
-    "svelte-preprocess": "<3",
-    "typescript": "^4.0.0",
-    "webpack-merge": "^4.2.1"
-  },
-  "peerDependencies": {
-    "eslint": "^7.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
