--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -18,7 +18,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/stone-payments/pos-mamba-sdk.git",
-    "directory": "packages/prettier-config"
+    "directory": "packages/prettier"
   },
   "dependencies": {
     "prettier-plugin-svelte": "^2.10.0"
