--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -19,7 +19,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/stone-payments/pos-mamba-sdk.git",
-    "directory": "packages/stylelint-config"
+    "directory": "packages/stylelint"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
