--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,64 +1,39 @@
 {
-  /** Allow to assign breakpoints to svelte templates */
-  "debug.allowBreakpointsEverywhere": true,
-  /** Enforce LF as line ending */
-  "files.eol": "\n",
-  /** Normalize trailing whitespaces */
-  "editor.trimAutoWhitespace": true,
-  "files.trimTrailingWhitespace": true,
-  /** Disable vscode default linters */
-  "javascript.validate.enable": false,
-  "typescript.validate.enable": false,
-  "css.validate": false,
-  "html.validate.scripts": false,
-  "html.validate.styles": false,
-  /** Disable svelte-vscode linters */
-  "svelte.plugin.css.diagnostics.enable": false,
-  "svelte.plugin.typescript.diagnostics.enable": false,
+  "emmet.showExpandedAbbreviation": "always",
   /** Associate css files to postcss language */
   "files.associations": {
     "*.css": "postcss"
   },
-  /** Emmet completion in postcss context */
-  "emmet.includeLanguages": {
-    "postcss": "css"
+  "editor.quickSuggestions": {
+    "strings": true
   },
-  "emmet.syntaxProfiles": {
-    "postcss": "css"
-  },
-  /** Enable auto format */
-  "[svelte]": {
-    "editor.formatOnSave": true
-  },
-  "[html]": {
-    "editor.formatOnSave": false
-  },
-  "[javascript]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[css]": {
-    "editor.formatOnSave": true
-  },
-  "[postcss]": {
-    "editor.formatOnSave": true
-  },
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.stylelint": true
-  },
-  /* Specifying which files to validate */
+  /** Enforce the extension use appropriate syntax for us. If invalid, VSCode will notify. */
+  "stylelint.customSyntax": "postcss-html",
+  /** Specifying which files to validate */
   "stylelint.validate": [
     "css",
     "postcss",
     "html"
   ],
-  /* Controls the package manager to be used to resolve the Stylelint library */
-  "stylelint.packageManager": "yarn",
-  /* Enforce the extension use appropriate syntax for us. If invalid, VSCode will notify.*/
-  "stylelint.customSyntax": "postcss-html",
-  /* Enforce working dir for monorepo */
-  "eslint.workingDirectories": [
-    "./"
-  ]
+  /** Emmet completion in postcss context */
+  "emmet.includeLanguages": {
+    "svelte": "html",
+    "postcss": "css"
+  },
+  "emmet.syntaxProfiles": {
+    "postcss": "css"
+  },
+  "[svelte]": {
+    "editor.defaultFormatter": "svelte.svelte-vscode"
+  },
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "svelte"
+  ],
+  "svelte.plugin.typescript.enable": true,
+  "svelte.enable-ts-plugin": true,
+  "javascript.suggestionActions.enabled": false,
+  "svelte.plugin.css.diagnostics.enable": false,
+  "editor.tabCompletion": "on",
 }
