--- a/packages/configs/typescript/tsconfig.json
+++ b/packages/configs/typescript/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Mamba",
+  "_version": "5.0.0",
   "extends": "@tsconfig/svelte/tsconfig.json",
   "typeAcquisition": {
     "enable": true
@@ -34,9 +37,5 @@
       "jest",
       "@testing-library/jest-dom"
     ]
-  },
-  "exclude": [
-    "node_modules/*",
-    "dist/*"
-  ],
+  }
 }
