--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
   "extends": "@mamba/configs/typescript/tsconfig.json",
+  "compilerOptions": {
+    "noEmit": true,
+    "baseUrl": "./",
+  },
+  "exclude": [
+    "**/.*/",
+    "**/node_modules"
+  ]
 }
