--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "storybook": "^7.0.12",
     "stylelint": "^15",
     "svelte": "^3.59.1",
