--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -24,11 +24,11 @@
     "npm": ">= 7"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "yarn run build:pos && yarn run build:desktop",
+    "clean": "rimraf dist",
+    "build": "run-s clean build:pos build:desktop copy-assets",
     "build:pos": "postcss ./src/pos.pcss -o ./dist/pos.css --verbose",
     "build:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css --verbose",
-    "postbuild": "ncp ./src/assets dist/assets",
+    "copy-assets": "ncp ./src/assets dist/assets",
     "start": "yarn run start:pos",
     "start:pos": "postcss ./src/pos.pcss -o ./dist/pos.css -w --verbose",
     "start:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css -w --verbose",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "ncp": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
     "rimraf": "^5.0.1"
