--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -3,6 +3,7 @@
   "version": "9.5.0",
   "description": "Webpack configs for Mamba applications",
   "author": "Stone Payments - Mamba Team",
+  "type": "module",
   "keywords": [
     "stone-payments",
     "mamba",
